--- a/packages/chrome/src/devtool-panels/api-tracker/api-tracker.html
+++ b/packages/chrome/src/devtool-panels/api-tracker/api-tracker.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <p>Hello World 1234</p>
+    </div>
     <script src="url:./api-tracker.tsx" type="module"></script>
   </body>
 </html>
