--- a/packages/chrome/src/devtool-panels/api-tracker/api-tracker.html
+++ b/packages/chrome/src/devtool-panels/api-tracker/api-tracker.html
@@ -7,9 +7,7 @@
   </head>
 
   <body>
-    <div id="root">
-      <p>Hello World 1234</p>
-    </div>
+    <div id="root" style="height: 80vh"></div>
     <script src="url:./api-tracker.tsx" type="module"></script>
   </body>
 </html>
