--- a/packages/chrome/src/devtool-panels/api-tracker/api-tracker.html
+++ b/packages/chrome/src/devtool-panels/api-tracker/api-tracker.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="../../style.css" />
   </head>
 
-  <body>
-    <div id="root">
-      <p>Hello World 1234</p>
-    </div>
+  <body class="overflow-hidden h-[100vh] dark">
+    <div id="root"></div>
     <script src="url:./api-tracker.tsx" type="module"></script>
   </body>
 </html>
